[gd_scene load_steps=2 format=3 uid="uid://cltgvj1tiklm6"]

[ext_resource type="Script" path="res://Assets/Scripts/scenecontroller.gd" id="1_640j3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_640j3")

[node name="LoadingTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="ScreenCover" type="ColorRect" parent="."]
z_index = 1
offset_left = -1500.0
offset_top = -2000.0
offset_right = 4500.0
offset_bottom = 2000.0
color = Color(0, 0, 0, 0)

[connection signal="timeout" from="LoadingTimer" to="." method="_on_loading_timer_timeout"]
